Se agrego una actividad formulario para que los usuarios puedan agregar a sus jugadores. Tambien se agregaron las vistas de la tabla de goleo y la tabla de posiciones

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,12 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
+        <activity android:name=".IngresarJugadores">
+        </activity>
+
     </application>
 
 </manifest>
