--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AprobarEquipo"></activity>
+        <activity android:name=".IngresaJugadorPorras"></activity>
+        <activity android:name=".AprobarEquipo" />
         <activity android:name=".PartidoActivity" />
         <activity
             android:name=".MainActivity"
